added project 2 mockups

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
       </div>
     </section>
-    <section id="work" class="portfolio-mf sect-pt4 route">
+    <section id="work" class="projects-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -200,39 +200,7 @@
             </div>
           </div>
         </div>
-          <div class="row">
-            <div class="box-shadow-full">
-              <div class="col-sm-12">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <div class="about-img">
-                          <img src="assets/img/prop-mockup-1.jpg" class="img-fluid rounded b-shadow-a" alt="" style="margin-bottom:12px;">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <div class="about-img">
-                          <img src="assets/img/prop-mockup-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-12">
-                    <h3 class="s-title-p">Latitude Music Festival</h3>
-                      <p class="s-description">
-                        This is a website for a 3 day music festival. You can see the line-up for the different artists, 
-                        choose a tent where you would like to stay and you are also able to purchase tickets if you would like to attend.
-                      </p>
-                  </div> 
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="row">
           <div class="box-shadow-full">
             <div class="col-sm-12">
               <div class="row">
@@ -240,34 +208,65 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="about-img">
-                        <img src="assets/img/post-3.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/prop-mockup-1.jpg" class="img-fluid rounded b-shadow-a" alt="" style="margin-bottom:12px;">
+                      </div>
                     </div>
                   </div>
                 </div>
+                <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="about-img">
+                        <img src="assets/img/prop-mockup-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <h3 class="s-title-p">Latitude Music Festival</h3>
+                    <p class="s-description">
+                      Website for a 3 day music festival. You can see the line-up for the different artists, 
+                      choose a tent where you would like to stay and you are also able to purchase tickets if you would like to attend.
+                    </p>
+                </div> 
               </div>
-            <div class="col-sm-6">
-             <h2 class="s-title-p"">Should I Eat It?</h2>
-              <p class="s-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quae nulla quaerat vel illum aperiam voluptate.</p>
-              </div> 
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="box-shadow-full">
+            <div class="col-sm-12">
+              <div class="row">
+                <div class="col-md-3">
+                  <div class="about-img">
+                    <img src="assets/img/pwa-mockup-2.png" class="img-fluid rounded b-shadow-a" alt="" style="margin-bottom:12px;">
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="about-img" style="margin-top:30px;">
+                    <img src="assets/img/pwa-mockup-1.png" class="img-fluid rounded b-shadow-a" alt="">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <h2 class="s-title-p"">Should I Eat It?</h2>
+                    <p class="s-description">
+                      A PWA where you scan a product's barcode or search by the barcode 
+                      and see what it contains, and to make sure it doesn't contain anything you are allergic to.
+                      You are also able to see whether the product is healthy enough for you. 
+                    </p>
+                </div> 
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>  
-  </section>
+    </section>
     <section id="work" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h3 class="title-a">
-                Portfolio
-              </h3>
-              <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p>
+              <h3 class="title-a">My Hobbies</h3>
               <div class="line-mf"></div>
             </div>
           </div>
@@ -420,9 +419,7 @@
 
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
-
-    <!-- ======= Testimonials Section ======= -->
+    </section>
     <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
@@ -459,9 +456,7 @@
           </div>
         </div>
       </div>
-    </div><!-- End Testimonials Section -->
-
-    <!-- ======= Blog Section ======= -->
+    </div>
     <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
         <div class="row">
@@ -573,9 +568,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Blog Section -->
-
-    <!-- ======= Contact Section ======= -->
+    </section>
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
@@ -586,40 +579,27 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="title-box-2">
-                      <h5 class="title-left">
-                        Send Message Us
-                      </h5>
+                      <h5 class="title-left-c">Contact Me</h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                      <form action="contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
-                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                              <div class="validate"></div>
+                              <input type="text" name="name" class="form-control" id="name" placeholder="Name" data-rule="minlen:4" />
                             </div>
                           </div>
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                              <div class="validate"></div>
-                            </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                              <div class="validate"></div>
+                              <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" />
                             </div>
                           </div>
                           <div class="col-md-12">
                             <div class="form-group">
-                              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                              <div class="validate"></div>
+                              <textarea class="form-control" name="message" rows="5" data-rule="required" placeholder="Message"></textarea>
                             </div>
                           </div>
                           <div class="col-md-12 text-center mb-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
@@ -631,9 +611,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="title-box-2 pt-4 pt-md-0">
-                      <h5 class="title-left">
-                        Get in Touch
-                      </h5>
+                      <h5 class="title-left-t">Get in Touch</h5>
                     </div>
                     <div class="more-info">
                       <p class="lead">
