icons in contact form responsive

--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
                       </div>
                     </div>
                   </form>
-                    <div class="icons">
+                  <div class="row">
+                    <div class="col-md-4">
                       <div class="socials">
                         <ul>
                           <li><a href="https://www.linkedin.com/in/nidhiiisharma/"><span class="ico-circle"><i class="fab fa-linkedin-square"></i></span></a></li>
@@ -490,6 +491,7 @@
                       </div>
                     </div>
                   </div>
+                </div>
                 </div>
               </div>
             </div>
