--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </div>
       </div>
     </section>
-    <section id="hobbies" class="portfolio-mf sect-pt4 route">
+    <!-- <section id="hobbies" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -435,7 +435,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section id="contact" class="projects-mf sect-pt4 route">
       <div class="container">
         <div class="row">
