updated source code links

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                       choose a tent where you would like to stay and you are also able to purchase tickets if you would like to attend.
                     </p>
                   <div class="source-code">
-                    <a href="https://git.fhict.nl/I380096/sm_duoapp_semester4.git">
+                    <a href="https://github.com/nidhiiisharma/LatitudeMusicFestival">
                       <span>Source code</span> 
                       <i class="icon-gh fab fa-github" aria-hidden="true" style="color:#20bf6b"></i>
                     </a>
@@ -265,7 +265,7 @@
                       You are also able to see whether the product is healthy enough for you. 
                     </p>
                     <div class="source-code">
-                      <a href="https://git.fhict.nl/I380096/prop.git">
+                      <a href="https://github.com/nidhiiisharma/ShouldIEatIt">
                         <span>Source code</span> 
                         <i class="icon-gh fab fa-github" aria-hidden="true" style="color:#20bf6b"></i>
                       </a>
