--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                     I'm always interested in making cool websites or designs. If you have a project that you want to get started, 
                     and think you would need my help or would like to contact me, then get in touch!
                   </p>
-                  <form id="contact-form" name="contact-form" action="contact.php" method="POST">
+                  <form id="contact-form" name="contact-form">
                     <div class="row">
                       <div class="col-md-12 mb-3">
                         <div class="form-group">
@@ -471,7 +471,7 @@
                         </div>
                       </div>
                       <div class="col-md-12 text-center">
-                        <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                        <button type="submit" class="button button-big button-rounded">Send Message</button>
                       </div>
                     </div>
                   </form>
@@ -510,7 +510,6 @@
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
   <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
