--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                 <span class="ico-circle"><i class="fas fa-mobile-alt"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">iOS and PWA Development</h2>
+                <h2 class="s-title">Mobile App Development</h2>
                 <p class="s-description text-center">
-                  In my specialization ICT & Smart Mobile, I built four applications. Two of them are part of iOS 
-                  Development and the other two are PWAs.
+                  In my specialization ICT & Smart Mobile, I have built mobile apps.
+                  Some of them are part of iOS/Android Development and the other two are PWAs. 
                 </p>
               </div>
             </div>
