--- a/index.html
+++ b/index.html
@@ -277,164 +277,6 @@
         </div>
       </div>
     </section>
-    <!-- <section id="hobbies" class="portfolio-mf sect-pt4 route">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">Hobbies</h3>
-              <div class="line-mf"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gall="portfolioGallery" class="venobox">
-                <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">Lorem impsum dolor</h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gall="portfolioGallery" class="venobox">
-                <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">Loreda Cuno Nere</h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gall="portfolioGallery" class="venobox">
-                <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">Mavrito Lana Dere</h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gall="portfolioGallery" class="venobox">
-                <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">Bindo Laro Cado</h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gall="portfolioGallery" class="venobox">
-                <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">Studio Lena Mado</h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gall="portfolioGallery" class="venobox">
-                <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">Studio Big Bang</h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <section id="contact" class="projects-mf sect-pt4 route">
       <div class="container">
         <div class="row">
@@ -447,46 +289,29 @@
         <div class="row">
           <div class="box-shadow-full">
             <div class="col-md-12">
-              <div class="row">
-                <div class="about-me pt-4 pt-md-0">
-                  <p class="lead">
-                    I'm always interested in making cool websites or designs. If you have a project that you want to get started, 
+              <div class="title-box-2 pt-4 pt-md-0">
+                <h5 class="title-right">Get in Touch</h5>
+              </div>
+              <div class="more-info">
+                <p class="lead">
+                  I'm always interested in making cool websites or designs. If you have a project that you want to get started, 
                     and think you would need my help or would like to contact me, then get in touch!
-                  </p>
-                  <form id="contact-form" name="contact-form">
-                    <div class="row">
-                      <div class="col-md-12 mb-3">
-                        <div class="form-group">
-                          <input type="text" name="name" class="form" id="name" placeholder="Name" data-rule="minlen:4" />
-                        </div>
-                      </div>
-                      <div class="col-md-12 mb-3">
-                        <div class="form-group">
-                          <input type="email" class="form" name="email" id="email" placeholder="Email" data-rule="email" />
-                        </div>
-                      </div>
-                      <div class="col-md-12">
-                        <div class="form-group">
-                          <textarea class="form" name="message" id="message" rows="5" data-rule="required" placeholder="Message"></textarea>
-                        </div>
-                      </div>
-                      <div class="col-md-12 text-center">
-                        <button type="submit" class="button button-big button-rounded">Send Message</button>
-                      </div>
-                    </div>
-                  </form>
-                  <div class="row">
-                    <div class="col-md-4">
-                      <div class="socials">
-                        <ul>
-                          <li><a href="https://www.linkedin.com/in/nidhiiisharma/"><span class="ico-circle"><i class="fab fa-linkedin-square"></i></span></a></li>
-                          <li><a href="https://github.com/nidhiiisharma"><span class="ico-circle"><i class="fab fa-github"></i></span></a></li>
-                          <li><a href="https://www.instagram.com/nidhisxm/"><span class="ico-circle"><i class="fab fa-instagram"></i></span></a></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                </p>
+                <ul class="list-ico">
+                  <li><span class="location-icon"><i class="fas fa-map-marker-alt"></i></span>Eindhoven, Netherlands</li>
+                  <li><span class="telephone-icon"><i class="fas fa-phone-alt"></i></span>+31 617739326</li>
+                  <li><span class="email-icon"><i class="fas fa-mail-bulk"></i></span>nidhisharmas0103@gmail.com</li>
+                </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="socials">
+                  <ul>
+                    <li><a href="https://www.linkedin.com/in/nidhiiisharma/"><span class="ico-circle"><i class="fab fa-linkedin-square"></i></span></a></li>
+                    <li><a href="https://github.com/nidhiiisharma"><span class="ico-circle"><i class="fab fa-github"></i></span></a></li>
+                    <li><a href="https://www.instagram.com/nidhisxm/"><span class="ico-circle"><i class="fab fa-instagram"></i></span></a></li>
+                  </ul>
                 </div>
               </div>
             </div>
