Updated website completely

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Nidhi Sharma</title>
+  <title>Portfolio</title>
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -13,7 +13,11 @@
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body id="page-top">
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
@@ -34,10 +38,10 @@
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Skills</a>
+            <a class="nav-link js-scroll" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Projects</a>
+            <a class="nav-link js-scroll" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -51,8 +55,8 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h1 class="intro-title mb-4">Designer, Front-end Developer</h1>
-          <p class="intro-subtitle">I design and code beautifully simple things, and I love what I do.</p>
+          <h1 class="intro-title mb-4">NIDHI SHARMA</h1>
+          <p class="intro-subtitle">I am a software engineer student with a passion of design and technology</p>
         </div>
       </div>
     </div>
@@ -79,15 +83,18 @@
                       <h5 class="title-left">Who Am I?</h5>
                     </div>
                     <p class="lead">
-                      Hi, I'm Nidhi Sharma, 20 year old born and raised on the Caribbean Island, St.Maarten. Currently I am pursuing my
+                      Hi, my name is Nidhi Sharma, 21 year old born and raised in the Caribbean on an island called St.Maarten. Currently I am pursuing my
                       further education at Fontys University of Applied Sciences in Eindhoven, Netherlands. 
                     </p>
                     <p class="lead">
-                      From a very young age, I have had a passion for the technology industry as well as art and designing. 
-                      Therefore, after high school, I decided to go into the technology field. I’m passionate about providing quality Web Designer service. 
-                      I always go above and beyond to ensure I get the job done right the first time. 
-                      My work stands out because I always strive for perfection in everything I do. I work well in a team and am a very helpful person to my colleagues.
-                      I look forward to working with you to help meet all your Web Designer needs.
+                      From a very young age, I have had a passion for the technology industry as well as media design. 
+                      Therefore, after high school, I decided to pursue my studies in software engineering and design.
+                      The experience and knowledge I have gained from my university's courses and projects have led me to seek a career in front-end development and design for websites. 
+                    </p>
+                    <p class = "lead">
+                      My work stands out because I always strive for perfection in everything I do. I believe I am a team player and could be a great asset to your company.
+                      I look forward to working with you to help meet all of your requirements as a developer and designer. 
+                    </p>
                     </p>
                   </div>
                 </div>
@@ -97,7 +104,7 @@
         </div>
       </div>
     </section>
-    <section id="service" class="projects-mf sect-pt4 route">
+    <section id="skills" class="projects-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -107,13 +114,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="fas fa-laptop"></i></span>
+                <span class="ico-circle"><i class="material-icons">&#xe320;</i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
+                <h2 class="s-title">Web Development & Design</h2>
                 <p class="s-description text-center">
                   I have skills in both front-end and back-end development, but I would always prefer to work on the front-end part
                   of the website or application.
@@ -121,10 +128,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="fas fa-mobile-alt"></i></span>
+                <span class="ico-circle"><i class="material-icons">&#xe325;</i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Mobile App Development</h2>
@@ -135,10 +142,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="fas fa-chart-line"></i></span>
+                <span class="ico-circle"><i class="material-icons">&#xe40a;</i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">UX / UI Design</h2>
@@ -149,10 +156,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="fas fa-laptop-code"></i></span>
+                <span class="ico-circle"><i class="material-icons">&#xe86f;</i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">C# / .NET Framework</h2>
@@ -163,43 +170,54 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fas fa-palette"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Design</h2>
-                <p class="s-description text-center">
-                  In my free time, I practice my skills. Using frameworks such as Angular JS and React. 
-                  Taking online courses to improve myself and learn new things. 
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fas fa-database"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Database</h2>
-                <p class="s-description text-center">
-                  At Fontys I followed multiple courses in database. I have quite a lot of knowledge and practice in this area as well 
-                  but it is not really interesting for me. 
-                </p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
-    <section id="work" class="projects-mf sect-pt4 route">
+    <section id="projects" class="projects-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">Portfolio</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="box-shadow-full">
+            <div class="col-sm-12">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="about-img">
+                        <img src="assets/img/cs-mockup-1.png" class="img-fluid rounded b-shadow-a" alt="" style="margin-bottom:12px;">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="about-img">
+                        <img src="assets/img/prop-mockup-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <h2 class="s-title-p">Latitude Music Festival</h2>
+                    <p class="s-description">
+                      A website for a 3 day music festival. You can see the line-up for the different artists, 
+                      choose a tent where you would like to stay and you are also able to purchase tickets if you would like to attend.
+                    </p>
+                  <div class="source-code">
+                    <a href="https://github.com/nidhiiisharma/LatitudeMusicFestival">
+                      <span>Source code</span> 
+                      <i class="icon-gh fa fa-github" aria-hidden="true" style="color:#20bf6b"></i>
+                    </a>
+                  </div>
+                </div> 
+              </div>
             </div>
           </div>
         </div>
@@ -234,7 +252,7 @@
                   <div class="source-code">
                     <a href="https://github.com/nidhiiisharma/LatitudeMusicFestival">
                       <span>Source code</span> 
-                      <i class="icon-gh fab fa-github" aria-hidden="true" style="color:#20bf6b"></i>
+                      <i class="icon-gh fa fa-github" aria-hidden="true" style="color:#20bf6b"></i>
                     </a>
                   </div>
                 </div> 
@@ -266,7 +284,7 @@
                     <div class="source-code">
                       <a href="https://github.com/nidhiiisharma/ShouldIEatIt">
                         <span>Source code</span> 
-                        <i class="icon-gh fab fa-github" aria-hidden="true" style="color:#20bf6b"></i>
+                        <i class="icon-gh fa fa-github" aria-hidden="true" style="color:#20bf6b"></i>
                       </a>
                     </div>
                   </div>
@@ -298,9 +316,9 @@
                     and think you would need my help or would like to contact me, then get in touch!
                 </p>
                 <ul class="list-ico">
-                  <li><span class="location-icon"><i class="fas fa-map-marker-alt"></i></span>Eindhoven, Netherlands</li>
-                  <li><span class="telephone-icon"><i class="fas fa-phone-alt"></i></span>+31 617739326</li>
-                  <li><span class="email-icon"><i class="fas fa-mail-bulk"></i></span>nidhisharmas0103@gmail.com</li>
+                  <li>Eindhoven, Netherlands</li>
+                  <li>+31 617739326</li>
+                  <li>nidhisharmas0103@gmail.com</li>
                 </ul>
               </div>
             </div>
@@ -308,9 +326,9 @@
               <div class="col-md-4">
                 <div class="socials">
                   <ul>
-                    <li><a href="https://www.linkedin.com/in/nidhiiisharma/"><span class="ico-circle"><i class="fab fa-linkedin-square"></i></span></a></li>
-                    <li><a href="https://github.com/nidhiiisharma"><span class="ico-circle"><i class="fab fa-github"></i></span></a></li>
-                    <li><a href="https://www.instagram.com/nidhisxm/"><span class="ico-circle"><i class="fab fa-instagram"></i></span></a></li>
+                    <li><a href="https://www.linkedin.com/in/nidhiiisharma/"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
+                    <li><a href="https://github.com/nidhiiisharma"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
+                    <li><a href="https://www.instagram.com/nidhisxm/"><span class="ico-circle"><i class="fa fa-instagram"></i></span></a></li>
                   </ul>
                 </div>
               </div>
@@ -324,7 +342,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright"><strong>Creativity simplified</strong> &copy; 2020</p>
+            <p class="copyright">&copy; <strong>Nidhi Sharma</strong> 2021</p>
             <div class="credits">
             </div>
           </div>
@@ -340,7 +358,6 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <script src="assets/js/main.js"></script>
 </body>
 </html>
