--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="about-img">
-                        <img src="assets/img/cs-mockup-1.png" class="img-fluid rounded b-shadow-a" alt="" style="margin-bottom:12px;">
+                        <img src="assets/img/prop-mockup-1.jpg" class="img-fluid rounded b-shadow-a" alt="" style="margin-bottom:12px;">
                       </div>
                     </div>
                   </div>
@@ -221,7 +221,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="box-shadow-full">
             <div class="col-sm-12">
               <div class="row">
@@ -259,7 +259,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="row">
           <div class="box-shadow-full">
             <div class="col-sm-12">
